[rce] fix(gallery image settings): aligned css with zeplin

--- a/rich-content-editor-example/src/theme/toolbars/modals/gallery/gallery-image-settings.theme.scss
+++ b/rich-content-editor-example/src/theme/toolbars/modals/gallery/gallery-image-settings.theme.scss
@@ -57,3 +57,6 @@
 
 .galleryImageSettings_footer {
 }
+
+.galleryImageSettings_backIcon {
+}
