--- a/rich-content-editor/src/Plugins/wix-draft-plugin-gallery/components/gallery-controls/gallery-image-settings.scss
+++ b/rich-content-editor/src/Plugins/wix-draft-plugin-gallery/components/gallery-controls/gallery-image-settings.scss
@@ -152,12 +152,12 @@ $MOBILE_HEADER_HEIGHT: 50px;
 }
 
 .galleryImageSettings_section {
-    padding: 20px 50px 0 30px;
+    padding: 20px 30px 0 30px;
     font-size: 14px;
 }
 
 .galleryImageSettingsLinkContainer {
-    padding: 4px 49px 0 29px;
+  padding: 4px 29px 0 29px;
 }
 
 .galleryImageSettings_scrollContainer {
