--- a/rich-content-editor/src/Plugins/wix-draft-plugin-image/toolbar/image-settings.scss
+++ b/rich-content-editor/src/Plugins/wix-draft-plugin-image/toolbar/image-settings.scss
@@ -44,12 +44,12 @@ $MOBILE_HEADER_HEIGHT: 50px;
 }
 
 .imageSettingsSection {
-  padding: 20px 50px 0 30px;
+  padding: 20px 30px 0 30px;
   font-size: 14px;
 }
 
 .imageSettingsLinkContainer {
-  padding: 4px 49px 0 29px;
+  padding: 4px 29px 0 29px;
 }
 
 .imageSettings_scrollContainer {
