--- a/rich-content-editor/src/Styles/input-with-label.scss
+++ b/rich-content-editor/src/Styles/input-with-label.scss
@@ -16,3 +16,9 @@
     opacity: 0.4;
   }
 }
+
+.inputWithLabel_textArea {
+  height: 101px;
+  resize: none;
+  padding: 9px 17px;
+}
